--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 <link rel="stylesheet" href="stylesheets/further.css" />
 <link rel="stylesheet" href="stylesheets/styles.css" />
 <link rel="stylesheet" href="stylesheets/pygment_trac.css" />
+<style>
+<!--
+.foldout {
+	max-height: 35px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 12px;
+	border: none;
+	overflow: hidden;
+	background-color: white;
+	transition: max-height 1s, background-color 1s;
+	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
+	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
+	-o-transition: max-height 1s, background-color 1s;          /* Opera */
+}
+.foldout:hover {
+	background-color: white;
+	max-height: 1000px;
+}
+-->
+</style>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -34,9 +56,7 @@
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
     <h1 style="margin-top:75px;"> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências </h1>
-    <h4> Frontend design/dev* web (pós-mobile) 
-    <small style="font-weight:normal;">* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small>
-    </h4>
+    <h4> Frontend design/dev* web (pós-mobile) <small style="font-weight:normal;">* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small> </h4>
     <p>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</p>
     <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> </p>
     <h4> Webdesign (pré-mobile)</h4>
@@ -61,7 +81,7 @@
     <h4> Flash (animação)</h4>
     <ul>
       <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>: actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão, web e jogos);</li>
-       <li><a href="http://flash-powertools.com/" target="_blank">Electric Dog Animation Power Tools</a>: plugins de suporte à animação em Flash;</li>
+      <li><a href="http://flash-powertools.com/" target="_blank">Electric Dog Animation Power Tools</a>: plugins de suporte à animação em Flash;</li>
     </ul>
     <h4>Flash (jogos)</h4>
     <ul>
@@ -71,118 +91,122 @@
     <hr />
     <h1 style="margin-bottom:-30px;"> Programas </h1>
     <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
-    <div class="boxed-group">
-      <div class="boxed-group-inner seamless">
-        <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
-          <caption>
-          Resumo
-          </caption>
-          <tr>
-            <th scope="row">Objectivos</th>
-            <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a  técnicas de animação limitada / cutout 2D.</td>
-          </tr>
-          <tr>
-            <th scope="row">Tópicos</th>
-            <td><ul>
-                <li>Ferramentas de desenho e manipulação de objectos. <br />
-                </li>
-                <li>Gestão de cores. <br />
-                </li>
-                <li>Importação de objectos  (vector, bitmap, áudio e vídeo). <br />
-                </li>
-                <li>Manutenção da Biblioteca. <br />
-                </li>
-                <li>Composição de cenas e edição da Linha do Tempo. <br />
-                </li>
-                <li>Design de Personagens e optimização para animação limitada. <br />
-                </li>
-                <li>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br />
-                </li>
-                <li>Animação em blocos complementares. <br />
-                </li>
-                <li>Outros: loops, efeitos especiais, trajectos e máscaras. <br />
-                </li>
-                <li>Importação de áudio e sincronismo de diálogos/acção. <br />
-                </li>
-                <li>Exportação da animação final ou blocos de animação para edição externa.</li>
-              </ul></td>
-          </tr>
-          <tr>
-            <th scope="row">Bibliografia</th>
-            <td><ul>
-                <li>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br />
-                </li>
-                <li>Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br />
-                </li>
-                <li>Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br />
-                </li>
-                <li>Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br />
-                </li>
-                <li>Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br />
-                </li>
-                <li>Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br />
-                </li>
-                <li>Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br />
-                </li>
-                <li>Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br />
-                </li>
-                <li>White, T., How to Make an Animated Film, Focal Press, 2009</li>
-              </ul></td>
-          </tr>
-        </table>
-        <p>Animações visionadas aqui <a class="button" href="http://www.youtube.com/user/valterdematos/" target="_blank">youtube.com/user/valterdematos</a> </p>
+    <div class="foldout">
+      <div class="boxed-group">
+        <div class="boxed-group-inner seamless">
+          <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+            <caption>
+            Resumo
+            </caption>
+            <tr>
+              <th scope="row">Objectivos</th>
+              <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a  técnicas de animação limitada / cutout 2D.</td>
+            </tr>
+            <tr>
+              <th scope="row">Tópicos</th>
+              <td><ul>
+                  <li>Ferramentas de desenho e manipulação de objectos. <br />
+                  </li>
+                  <li>Gestão de cores. <br />
+                  </li>
+                  <li>Importação de objectos  (vector, bitmap, áudio e vídeo). <br />
+                  </li>
+                  <li>Manutenção da Biblioteca. <br />
+                  </li>
+                  <li>Composição de cenas e edição da Linha do Tempo. <br />
+                  </li>
+                  <li>Design de Personagens e optimização para animação limitada. <br />
+                  </li>
+                  <li>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br />
+                  </li>
+                  <li>Animação em blocos complementares. <br />
+                  </li>
+                  <li>Outros: loops, efeitos especiais, trajectos e máscaras. <br />
+                  </li>
+                  <li>Importação de áudio e sincronismo de diálogos/acção. <br />
+                  </li>
+                  <li>Exportação da animação final ou blocos de animação para edição externa.</li>
+                </ul></td>
+            </tr>
+            <tr>
+              <th scope="row">Bibliografia</th>
+              <td><ul>
+                  <li>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br />
+                  </li>
+                  <li>Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br />
+                  </li>
+                  <li>Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br />
+                  </li>
+                  <li>Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br />
+                  </li>
+                  <li>Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br />
+                  </li>
+                  <li>Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br />
+                  </li>
+                  <li>Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br />
+                  </li>
+                  <li>Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br />
+                  </li>
+                  <li>White, T., How to Make an Animated Film, Focal Press, 2009</li>
+                </ul></td>
+            </tr>
+          </table>
+          <p>Animações visionadas aqui <a class="button" href="http://www.youtube.com/user/valterdematos/" target="_blank">youtube.com/user/valterdematos</a> </p>
+        </div>
       </div>
     </div>
     <h2> <a name="cmi2013" class="anchor" href="#cmi2013"><span class="octicon octicon-link"></span></a> Computação Multimédia e Interactividade</h2>
-    <div class="boxed-group">
-      <div class="boxed-group-inner seamless">
-        <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
-          <caption>
-          Resumo
-          </caption>
-          <tr>
-            <th scope="row">Objectivos</th>
-            <td><p>Aquisição de um conhecimento profundo das mais recentes metodologias e tecnologias de produção de <em>websites</em> no <em>frontend</em> design e compatibilidade <em>mobile</em> / <em>desktop</em>.</p>
-              <ul>
-                <li> Familiarização com o Estado da Arte técnico do design/desenvolvimento web; </li>
-                <li> Aquisição de competências em tecnologias modernas de produção web com especial incidência na sensibilização ao <em>mobile</em> e <em>responsive web design</em>;</li>
-                <li>Familiarização com uma <em>framework</em> de HTML/CSS/Javascript que cumpra com os propósitos enunciados. </li>
-              </ul></td>
-          </tr>
-          <tr>
-            <th scope="row">Tópicos</th>
-            <td><ul>
-                <li> Resumo Estado da Arte; <br />
-                </li>
-                <li> <em>Frameworks</em>; <br />
-                </li>
-                <li>Introdução ao Bootstrap;</li>
-                <li>RWD: <em>media queries</em> e <em>mobile first</em>;</li>
-                <li>Bootstrap <em>grid</em>: default e fluido;</li>
-                <li>Outros: CSS, componentes e javascript;</li>
-                <li>Personalização do Bootstrap;</li>
-                <li>Projecto</li>
-              </ul></td>
-          </tr>
-          <tr>
-            <th scope="row">Bibliografia</th>
-            <td><ul>
-                <li>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br />
-                </li>
-                <li>Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br />
-                </li>
-                <li>Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br />
-                </li>
-                <li>Wroblewski, Luke. Mobile First. New York: Book Apart, 2011<br />
-                </li>
-                <li>Spurlock, Jake. Bootstrap. Sebastopol, CA: O'Reilly Media, 2013. Print. </li>
-              </ul></td>
-          </tr>
-        </table>
+    <div class="foldout">
+      <div class="boxed-group">
+        <div class="boxed-group-inner seamless">
+          <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+            <caption>
+            Resumo
+            </caption>
+            <tr>
+              <th scope="row">Objectivos</th>
+              <td><p>Aquisição de um conhecimento profundo das mais recentes metodologias e tecnologias de produção de <em>websites</em> no <em>frontend</em> design e compatibilidade <em>mobile</em> / <em>desktop</em>.</p>
+                <ul>
+                  <li> Familiarização com o Estado da Arte técnico do design/desenvolvimento web; </li>
+                  <li> Aquisição de competências em tecnologias modernas de produção web com especial incidência na sensibilização ao <em>mobile</em> e <em>responsive web design</em>;</li>
+                  <li>Familiarização com uma <em>framework</em> de HTML/CSS/Javascript que cumpra com os propósitos enunciados. </li>
+                </ul></td>
+            </tr>
+            <tr>
+              <th scope="row">Tópicos</th>
+              <td><ul>
+                  <li> Resumo Estado da Arte; <br />
+                  </li>
+                  <li> <em>Frameworks</em>; <br />
+                  </li>
+                  <li>Introdução ao Bootstrap;</li>
+                  <li>RWD: <em>media queries</em> e <em>mobile first</em>;</li>
+                  <li>Bootstrap <em>grid</em>: default e fluido;</li>
+                  <li>Outros: CSS, componentes e javascript;</li>
+                  <li>Personalização do Bootstrap;</li>
+                  <li>Projecto</li>
+                </ul></td>
+            </tr>
+            <tr>
+              <th scope="row">Bibliografia</th>
+              <td><ul>
+                  <li>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br />
+                  </li>
+                  <li>Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br />
+                  </li>
+                  <li>Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br />
+                  </li>
+                  <li>Wroblewski, Luke. Mobile First. New York: Book Apart, 2011<br />
+                  </li>
+                  <li>Spurlock, Jake. Bootstrap. Sebastopol, CA: O'Reilly Media, 2013. Print. </li>
+                </ul></td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
-
-<h2><a name="ic2013" class="anchor" href="#ic2013"><span class="octicon octicon-link"></span></a> Introdução à Computação</h2>
+    <h2><a name="ic2013" class="anchor" href="#ic2013"><span class="octicon octicon-link"></span></a> Introdução à Computação</h2>
+    <div class="foldout">
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -196,30 +220,31 @@
           <tr>
             <th scope="row">Tópicos</th>
             <td><ul>
-              <li>Familiaridade com o interface do Flash e domínio das suas ferramentas;</li>
-              <li>Execução de projectos gráficos e produção de materiais visuais combinados (vectores, bitmaps, texto, vídeo, áudio);</li>
-              <li>Integração com outras ferramentas de produção gráfica;</li>
-              <li>Compreensão das potencialidades do Flash para web, vantagens e desvantagens;</li>
-            </ul>              </td>
+                <li>Familiaridade com o interface do Flash e domínio das suas ferramentas;</li>
+                <li>Execução de projectos gráficos e produção de materiais visuais combinados (vectores, bitmaps, texto, vídeo, áudio);</li>
+                <li>Integração com outras ferramentas de produção gráfica;</li>
+                <li>Compreensão das potencialidades do Flash para web, vantagens e desvantagens;</li>
+              </ul></td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
             <td><ul>
-              <li>Apoios e referências diversas fornecidos em aula.</li>
-              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
-              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Advertising with Flash. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b29a.html [acedido: 29 Sep 2013].</li>
-              <li>AdobeTV. 2013. CS5 Design Premium Feature Tour - Interaction Design 101: Create a simple banner ad with Flash Professional CS5 on Adobe TV. [online] Disponível em: http://tv.adobe.com/watch/cs5-design-premium-feature-tour/interaction-design-101-create-a-simple-banner-ad-with-flash-professional-cs5/ [acedido: 29 Sep 2013].</li>
-              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Optimizing FLA files for SWF output. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b23a.html# WSd60f23110762d6b883b18f10cb1fe1af6-7b1ba [acedido: 29 Sep 2013].</li>
-            </ul>            </td>
+                <li>Apoios e referências diversas fornecidos em aula.</li>
+                <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
+                <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Advertising with Flash. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b29a.html [acedido: 29 Sep 2013].</li>
+                <li>AdobeTV. 2013. CS5 Design Premium Feature Tour - Interaction Design 101: Create a simple banner ad with Flash Professional CS5 on Adobe TV. [online] Disponível em: http://tv.adobe.com/watch/cs5-design-premium-feature-tour/interaction-design-101-create-a-simple-banner-ad-with-flash-professional-cs5/ [acedido: 29 Sep 2013].</li>
+                <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Optimizing FLA files for SWF output. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b23a.html# WSd60f23110762d6b883b18f10cb1fe1af6-7b1ba [acedido: 29 Sep 2013].</li>
+              </ul></td>
           </tr>
         </table>
       </div>
     </div>
-    
+    </div>
     <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
-    <div class="flash-messages">
+        <div class="flash-messages">
       <div class="flash  flash-warn"> Por actualizar </div>
     </div>
+    <div class="foldout">
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -256,6 +281,7 @@
           </tr>
         </table>
       </div>
+    </div>
     </div>
     <h1> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo</h1>
     <h2>Anos lectivos em netPA</h2>
