--- a/index.html
+++ b/index.html
@@ -9,21 +9,35 @@
 <link rel="stylesheet" href="stylesheets/pygment_trac.css" />
 <style>
 <!--
+.grad-t {
+	background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)));
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+	background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+	background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+	height: 20px;
+	position: absolute;
+	bottom:0; 
+    width: 100%;
+}
 .foldout {
-	max-height: 35px;
+	max-height: 40px;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 12px;
 	border: none;
 	overflow: hidden;
-	background-color: white;
+	position:relative;
+	padding:0 10px 10px 10px;
 	transition: max-height 1s, background-color 1s;
 	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
 	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
 	-o-transition: max-height 1s, background-color 1s;          /* Opera */
 }
 .foldout:hover {
+	background-image: none;	
 	background-color: white;
 	max-height: 1000px;
 }
@@ -154,6 +168,7 @@
           <p>Animações visionadas aqui <a class="button" href="http://www.youtube.com/user/valterdematos/" target="_blank">youtube.com/user/valterdematos</a> </p>
         </div>
       </div>
+	<div class="grad-t"></div>	  
     </div>
     <h2> <a name="cmi2013" class="anchor" href="#cmi2013"><span class="octicon octicon-link"></span></a> Computação Multimédia e Interactividade</h2>
     <div class="foldout">
@@ -204,6 +219,7 @@
           </table>
         </div>
       </div>
+	  <div class="grad-t"></div>	
     </div>
     <h2><a name="ic2013" class="anchor" href="#ic2013"><span class="octicon octicon-link"></span></a> Introdução à Computação</h2>
     <div class="foldout">
@@ -238,10 +254,12 @@
           </tr>
         </table>
       </div>
+	  <div class="grad-t"></div>	
     </div>
     </div>
+    
     <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
-        <div class="flash-messages">
+    <div class="flash-messages">
       <div class="flash  flash-warn"> Por actualizar </div>
     </div>
     <div class="foldout">
@@ -282,8 +300,10 @@
         </table>
       </div>
     </div>
+		<div class="grad-t"></div>	
     </div>
-    <h1> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo</h1>
+    	
+    <h1 style="margin-top:40px;"> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo</h1>
     <h2>Anos lectivos em netPA</h2>
     <h3> 2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br />
@@ -347,7 +367,7 @@
   <footer>
     <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
   </footer>
-</div>
+
 <script src="javascripts/scale.fix.js"></script> 
 <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
