--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	border: none;
 	overflow: hidden;
 	position:relative;
-	padding:0 10px 10px 10px;
+	padding:0 10px 10px 0;
 	transition: max-height 1s, background-color 1s;
 	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
 	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
