CID: bibliografia actualizada

--- a/index.html
+++ b/index.html
@@ -157,15 +157,20 @@
           <tr>
             <th scope="row">Bibliografia</th>
             <td><ul>
-                <li>Apoios e referências diversas fornecidos em aula.</li>
-                <li>Griffith, Christopher. Real-world Flash Game Development: How to Follow Best Practices and Keep Your</li>
-                <li>Sanity. Burlington, MA: Elsevier Focal, 2010</li>
-                <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
-                <li>Makar, Jobe. Macromedia Flash MX Game Design Demystified: The Official Guide. Berkeley, CA: Peachpit, 2002</li>
-                <li>Adobe.com. 2013. Game development | Adobe Developer Connection. [online] Disponível em: http://www.adobe.com/devnet/games.html [acesso: 20 Setembro 2013].</li>
-                <li>Gaming.adobe.com. 2013. Adobe Gaming - Better games. More easily. For more people.. [online] Disponível em: http://gaming.adobe.com/ [acesso: 20 Setembro 2013].</li>
-                <li>Tonypa.pri.ee. 2013. Tile based games. [online] Disponível em: http://www.tonypa.pri.ee/tbw/ start.html [acesso: 20 Setembro 2013]</li>
-              </ul></td>
+              <li>Feronato, E., Flash game development by example. Birmingham, UK, 2011</li>
+              <li>Firebaugh, R., Macromedia flash professional 8 game graphics. Boston, Mass.: Charles River Media, 2007</li>
+              <li>Fox, B., Game interface design. Boston, MA: Thomson Course Technology, 2005</li>
+              <li>Griffith, Christopher. Real-world Flash Game Development: How to Follow Best Practices and Keep Your Sanity. Burlington, MA: Elsevier Focal, 2010</li>
+              <li>Harris, A., Beginning Flash game programming for dummies. Hoboken, N.J.: Wiley, 2006</li>
+              <li>Makar, Jobe. Macromedia Flash MX Game Design Demystified: The Official Guide. Berkeley, CA: Peachpit, 2002</li>
+              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
+              <li>Tonypa.pri.ee., Tile based games. [online] Consultado em: http://www.tonypa.pri.ee/tbw/start.html [acedido: 23 Fev 2014].</li>
+              <li>Van Der Spuy, R., Foundation game design with Actionscript 3.0. [New York]: Friends of Ed., 2012</li>
+              <li>http://www.adobe.com/devnet/air/native-extensions-for-air.html</li>
+              <li>http://www.adobe.com/devnet/games.html</li>
+              <li>http://www.adobe.com/devnet/flashplayer/stage3d.html</li>
+              <li>http://www.adobe.com/devnet/flashplatform/whitepapers/roadmap.html</li>
+            </ul></td>
           </tr>
         </table>
       </div>
