--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <p class="view">pushing pixels since '97 </p>
   <p><strong>Sítio de arquivo à docência</strong>. <br />
     Os programas aqui listados são meramente indicativos, sendo posteriormente adequados nas respectivas coordenações às contingências do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
+  <p class="dashboard-tabs">Apoios do <a href="https://speakerdeck.com/valterdematos" target="_blank">Deckspeaker</a></p>
 </header>
 <section>
   <div class="pagehead">
@@ -128,7 +129,7 @@
   <hr />
   <h1> Programas </h1>
   <div class="flash-messages" style="margin-bottom:-30px;">
-    <div class="flash flash">1º Semestre</div>
+    <div class="flash flash">2º Semestre</div>
   </div>
   <!-- CID -->
   <h2> <a name="cid2013" class="anchor" href="#cid2013"><span class="octicon octicon-link"></span></a> Computação de Imagem Digital</h2>
