--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <p class="view">pushing pixels since '97 </p>
   <p><strong>Sítio de arquivo à docência</strong>. <br />
     Os programas aqui listados são meramente indicativos, sendo posteriormente adequados nas respectivas coordenações às contingências do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
-  <p class="dashboard-tabs"><a href="https://speakerdeck.com/valterdematos" target="_blank">Apoios do Deckspeaker</a></p>
+  <p class="dashboard-tabs"><a href="https://speakerdeck.com/valterdematos" target="_blank">Apoios do Speaker Deck</a></p>
 </header>
 <section>
   <div class="pagehead">
