--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 	background-color: white;
 	max-height: 1000px;
 }
-.pagehead h1 {text-align:right;}
+.pagehead h1 {
+	text-align: right;
+}
 }
 @media all and (max-width: 960px) {
-.pagehead h1 {text-align:center;}	
-	}
+.pagehead h1 {
+	text-align: center;
+}
+}
 -->
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -63,13 +67,15 @@
 <section>
   <h2>Anos lectivos em netPA</h2>
   <h3>2014/2015</h3>
-  <p>1º Semestre 2590 Computação Multimédia e Interactividade<br>
-	1º Semestre 2586 Design de Produtos Multimédia<br>
-	1º Semestre 2279 Introdução à Computação<br>
-	1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+  <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
+    1º Semestre 2586 Design de Produtos Multimédia<br>
+    1º Semestre 2279 Introdução à Computação<br>
+    1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+    2º Semestre 7031 Computação de Imagem Digital <br>
+    2º Semestre 14928 Gestão de Conteúdo e Aplicações Web <br>
   </p>
   <h3>2013/2014</h3>
-  <p>1º Semestre	 2590	Computação Multimédia e Interactividade<br>
+  <p>1º Semestre 2590	Computação Multimédia e Interactividade<br>
     1º Semestre	 2586	Design de Produtos Multimédia<br>
     1º Semestre	 2279	Introdução à Computação<br>
     1º Semestre	 9453	Tecnologias de Animação Bidimensional<br>
@@ -79,24 +85,24 @@
   </p>
   <h3>2012/2013</h3>
   <p>1º Semestre 2586 Design de Produtos Multimédia<br />
+    1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
     2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
     2º Semestre 7031 Computação de Imagem Digital<br />
-    1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
     2º Semestre 11048 Atelier de Artes Digitais II</p>
   <h3> 2011/2012</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
-    2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
-    2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
-    2º Semestre 7031 Computação de Imagem Digital<br />
     1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
+  2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
+  2º Semestre 7031 Computação de Imagem Digital<br />
   <h3> 2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
   <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
   <h3> 2009/2010</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2586 Design de Produtos Multimédia<br />
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
-    2º Semestre 7282 Desenho e Animação 2D e 3D<br />
     1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+  2º Semestre 7282 Desenho e Animação 2D e 3D<br />
   <h3> 2008/2009</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2586 Design de Produtos Multimédia<br />
@@ -118,8 +124,8 @@
     1º Semestre 4261 Design de Produtos Multimédia I<br />
     1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
     1º Semestre 7281 Sistemas de Informação Multimédia<br />
-    2º Semestre 7282 Desenho e Animação 2D e 3D<br />
     1º Semestre 7291 Atelier de Publicidade e Marketing</p>
+  2º Semestre 7282 Desenho e Animação 2D e 3D<br />
   <h3> 2005/2006</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2375 Computação Escrita e Gráfica<br />
