--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     2º Semestre 11048 Atelier de Artes Digitais II</p>
   <h3> 2011/2012</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
-    1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+    1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
   2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
   2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
-  2º Semestre 7031 Computação de Imagem Digital<br />
+  2º Semestre 7031 Computação de Imagem Digital</p>
   <h3> 2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
   <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
   <h3> 2009/2010</h3>
