--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<title>Valterdematos.github.io by valterdematos</title>
+<title>pushing pixels</title>
 <link rel="stylesheet" href="stylesheets/further.css" />
 <link rel="stylesheet" href="stylesheets/styles.css" />
 <link rel="stylesheet" href="stylesheets/pygment_trac.css" />
