--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
   2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
   2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
   2º Semestre 7031 Computação de Imagem Digital</p>
-  <h3> 2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
+  <h3> 2010/2011</h3>
   <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
   <h3> 2009/2010</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2586 Design de Produtos Multimédia<br />
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
-    1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-  2º Semestre 7282 Desenho e Animação 2D e 3D<br />
+    1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
+  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
   <h3> 2008/2009</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2586 Design de Produtos Multimédia<br />
