--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     1º Semestre 4261 Design de Produtos Multimédia I<br />
     1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
     1º Semestre 7281 Sistemas de Informação Multimédia<br />
-    1º Semestre 7291 Atelier de Publicidade e Marketing</p>
-  2º Semestre 7282 Desenho e Animação 2D e 3D<br />
+    1º Semestre 7291 Atelier de Publicidade e Marketing<br />
+  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
   <h3> 2005/2006</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2375 Computação Escrita e Gráfica<br />
