--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 </header>
 <section>
   <h2>Anos lectivos em netPA</h2>
+  <h3>2015/2016</h3>
+  <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
+    1º Semestre 2586 Design de Produtos Multimédia<br>
+    1º Semestre 2279 Introdução à Computação<br>
+    1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+  </p>
   <h3>2014/2015</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
