--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     1º Semestre 2586 Design de Produtos Multimédia<br>
     1º Semestre 2279 Introdução à Computação<br>
     1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+    2º Semestre 14928 Gestão de Conteúdo e Aplicações Web    <br>
   </p>
   <h3>2014/2015</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
