--- a/index.html
+++ b/index.html
@@ -143,13 +143,8 @@
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
     1º Semestre 5707 Atelier de Design Multimédia<br />
     2º Semestre 5707 Atelier de Design Multimédia</p>
-  <h2> Anos lectivos anteriores ao netPA</h2>
-  <h3>2004-2005<br />
-    2003-2004<br />
-    2002-2003<br />
-    2001-2002<br />
-    2000-2001<br />
-    1999-2000</h3>
+  <h2> ...anteriores à secretaria virtual:</h2>
+  <h3>2004-2005 | 2003-2004 | 2002-2003 | 2001-2002 | 2000-2001 | 1999-2000</h3>
 </section>
 <footer>
   <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
