--- a/index.html
+++ b/index.html
@@ -143,11 +143,14 @@
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
     1º Semestre 5707 Atelier de Design Multimédia<br />
     2º Semestre 5707 Atelier de Design Multimédia</p>
-  <h2> ...anteriores à secretaria virtual:</h2>
-  <h3>2004-2005 | 2003-2004 | 2002-2003 | 2001-2002 | 2000-2001 | 1999-2000</h3>
+  <div class="caixa">
+  
+  <h4 class="timeline"><span>1999-2000</span><span>2000-2001</span><span>2001-2002</span><span>2002-2003</span><span>2003-2004</span><span>2004-2005</span></h4>
+    <p class="nota">anteriores Secretaria Virtual</p>
+  </div>
 </section>
 <footer>
-  <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+  <p><small>Hosted on GitHub Pages</small></p>
 </footer>
 <script src="javascripts/scale.fix.js"></script> 
 <script>
