--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <p class="view">pushing pixels since '97 </p>
 </header>
 <section>
-  <h2>Anos lectivos em netPA</h2>
+  <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
   <p>:) </p>
     <h3>2015/2016</h3>
