--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
 </section>
 <footer>
-  <p><small>Hosted on GitHub Pages</small></p>
+  <p>&nbsp;</p>
 </footer>
 <script src="javascripts/scale.fix.js"></script> 
 <script>
