--- a/index.html
+++ b/index.html
@@ -10,45 +10,47 @@
 <style>
 <!--
 .grad-t {
-	background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,1)));
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
- filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0 );
-	height: 20px;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,1)));
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0 );
+    height: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
+
 @media all and (min-width: 961px) {
 .foldout {
-	max-height: 40px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	border: none;
-	overflow: hidden;
-	position: relative;
-	padding: 0 10px 10px 0;
-	transition: max-height 1s, background-color 1s;
-	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
-	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
-	-o-transition: max-height 1s, background-color 1s;          /* Opera */
+    max-height: 40px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    overflow: hidden;
+    position: relative;
+    padding: 0 10px 10px 0;
+    transition: max-height 1s, background-color 1s;
+    -moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
+    -webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
+    -o-transition: max-height 1s, background-color 1s;          /* Opera */
 }
 .foldout:hover {
-	background-image: none;
-	background-color: white;
-	max-height: 1000px;
+    background-image: none;
+    background-color: white;
+    max-height: 1000px;
 }
 .pagehead h1 {
-	text-align: right;
+    text-align: right;
 }
 }
+
 @media all and (max-width: 960px) {
 .pagehead h1 {
-	text-align: center;
+    text-align: center;
 }
 }
 -->
@@ -65,15 +67,28 @@
   <p class="view">pushing pixels since '97 </p>
 </header>
 <section>
+  <h2>Comunicação e Marketing</h2>
+  <div class="caixa">
+    <h4 class="timeline">Planos de Actividade</h4>
+    <ul>
+      <li><a href="https://youtu.be/6eiPfEnI4QE" target="_blank">Marketing 2016</a></li>
+      <li><a href="https://youtu.be/dBXSCj2VZ4U" target="_blank">Marketing 2018</a></li>
+      <li><a href="https://youtu.be/GxJF_CvD00A" target="_blank">Marketing 2020</a></li>
+      <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Marketing 2021 (pt1)</a> <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Marketing 2021 (pt2)</a></li>
+    </ul>
+    <p class="nota">seguir ordem para continuidade</p>
+  </div>
+</section>
+<section>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
   <p>:) </p>
-    <h3>2015/2016</h3>
+  <h3>2015/2016</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
     1º Semestre 2279 Introdução à Computação<br>
     1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
-    2º Semestre 14928 Gestão de Conteúdo e Aplicações Web    <br>
+    2º Semestre 14928 Gestão de Conteúdo e Aplicações Web <br>
   </p>
   <h3>2014/2015</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
@@ -101,9 +116,9 @@
   <h3> 2011/2012</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
-  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
-  2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
-  2º Semestre 7031 Computação de Imagem Digital</p>
+    2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
+    2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
+    2º Semestre 7031 Computação de Imagem Digital</p>
   <h3> 2010/2011</h3>
   <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
   <h3> 2009/2010</h3>
@@ -111,7 +126,7 @@
     1º Semestre 2586 Design de Produtos Multimédia<br />
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
     1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
-  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
+    2º Semestre 7282 Desenho e Animação 2D e 3D</p>
   <h3> 2008/2009</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2586 Design de Produtos Multimédia<br />
@@ -134,7 +149,7 @@
     1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
     1º Semestre 7281 Sistemas de Informação Multimédia<br />
     1º Semestre 7291 Atelier de Publicidade e Marketing<br />
-  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
+    2º Semestre 7282 Desenho e Animação 2D e 3D</p>
   <h3> 2005/2006</h3>
   <p>1º Semestre 2279 Introdução à Computação<br />
     1º Semestre 2375 Computação Escrita e Gráfica<br />
@@ -143,8 +158,7 @@
     2º Semestre 2377 Computação da Imagem e Som Digitais<br />
     2º Semestre 5707 Atelier de Design Multimédia</p>
   <div class="caixa">
-  
-  <h4 class="timeline"><span>1999-2000</span><span>2000-2001</span><span>2001-2002</span><span>2002-2003</span><span>2003-2004</span><span>2004-2005</span></h4>
+    <h4 class="timeline"><span>1999-2000</span><span>2000-2001</span><span>2001-2002</span><span>2002-2003</span><span>2003-2004</span><span>2004-2005</span></h4>
     <p class="nota">anteriores Secretaria Virtual</p>
   </div>
 </section>
