--- a/index.html
+++ b/index.html
@@ -67,17 +67,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
   <p class="view">pushing pixels since '97 </p>
 </header>
 <section>
-  <h2>Comunicação e Marketing</h2>
-  <div class="caixa">
-    <h4 class="timeline">Planos de Actividade</h4>
-    <ul>
-      <li><a href="https://youtu.be/6eiPfEnI4QE" target="_blank">Marketing 2016</a></li>
-      <li><a href="https://youtu.be/dBXSCj2VZ4U" target="_blank">Marketing 2018</a></li>
-      <li><a href="https://youtu.be/GxJF_CvD00A" target="_blank">Marketing 2020</a></li>
-      <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Marketing 2021 (pt1)</a> <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Marketing 2021 (pt2)</a></li>
-    </ul>
-    <p class="nota">seguir ordem para continuidade</p>
-  </div>
+  <h2>Planos de Actividade</h2>
+  <h3>Marketing 2016</h3>
+  <p><a href="https://youtu.be/6eiPfEnI4QE" target="_blank">Youtube</a></p>
+  <h3>Marketing 2018</h3>
+  <p><a href="https://youtu.be/dBXSCj2VZ4U" target="_blank">Youtube</a></p>
+  <h3>Marketing 2020</h3>
+  <p><a href="https://youtu.be/GxJF_CvD00A" target="_blank">Youtube</a></p>
+  <h3>Marketing 2021</h3>
+  <p><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: premium</a> <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Youtube pt2: back catalogue</a></p>
 </section>
 <section>
   <h2>Anos lectivos</h2>
