--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
   <h3>Marketing 2020</h3>
   <p><a href="https://youtu.be/GxJF_CvD00A" target="_blank">Youtube</a></p>
   <h3>Marketing 2021</h3>
-  <p><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: premium</a> <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Youtube pt2: back catalogue</a></p>
-</section>
-<section>
+  <p><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: premium</a> <br>
+    <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Youtube pt2: back catalogue</a></p>
+  <hr>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
   <p>:) </p>
