--- a/index.html
+++ b/index.html
@@ -68,19 +68,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 </header>
 <section>
   <h2>Planos de Actividade</h2>
-  <h3>Marketing 2016</h3>
-  <p><a href="https://youtu.be/6eiPfEnI4QE" target="_blank">Youtube</a></p>
-  <h3>Marketing 2018</h3>
-  <p><a href="https://youtu.be/dBXSCj2VZ4U" target="_blank">Youtube</a></p>
+  <h3>Marketing 2021</h3>
+  <ul>
+    <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: PREMIUM</a></li>
+    <li><a href="https://youtu.be/4vFigaJJhgM" target="_blank">Youtube pt2: BACK CATALOGUE</a></li>
+  </ul>
   <h3>Marketing 2020</h3>
   <p><a href="https://youtu.be/GxJF_CvD00A" target="_blank">Youtube</a></p>
-  <h3>Marketing 2021</h3>
-  <p><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: premium</a> <br>
-    <a href="https://youtu.be/4vFigaJJhgM" target="_blank">Youtube pt2: back catalogue</a></p>
+  <h3>Marketing 2018</h3>
+  <p><a href="https://youtu.be/dBXSCj2VZ4U" target="_blank">Youtube</a></p>
+  <h3>Marketing 2016</h3>
+  <p><a href="https://youtu.be/6eiPfEnI4QE" target="_blank">Youtube</a></p>
   <hr>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
-  <p>:) </p>
+  <p>no mo' classes, all 'bout the marketin' :) </p>
   <h3>2015/2016</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
