--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     2º Semestre 5707 Atelier de Design Multimédia</p>
   <div class="caixa">
     <h4 class="timeline"><span>1999-2000</span><span>2000-2001</span><span>2001-2002</span><span>2002-2003</span><span>2003-2004</span><span>2004-2005</span></h4>
-    <p class="nota">anteriores Secretaria Virtual</p>
+    <p class="nota">anteriores Secretaria Virtual | exemplos materiais de apoio às aulas <a href="https://speakerdeck.com/valterm" target="_blank">aqui</a></p>
   </div>
 </section>
 <footer>
