--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 </header>
 <section>
   <h2>Planos de Actividade</h2>
+  <h3>Marketing 2022</h3>
+  <p>?</p>
   <h3>Marketing 2021</h3>
   <ul>
     <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: PREMIUM</a></li>
@@ -82,7 +84,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
   <hr>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
-  <p>no mo' classes, all 'bout the marketin' :) </p>
+  <p>Interrupção da carreira docência para desenvolver projectos no gabinete de Comunicação e Marketing da Universidade.</p>
   <h3>2015/2016</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
@@ -157,9 +159,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     1º Semestre 2590 Computação Multimédia e Interactividade<br />
     2º Semestre 2377 Computação da Imagem e Som Digitais<br />
     2º Semestre 5707 Atelier de Design Multimédia</p>
+  <hr>
+  <p>Exemplo materiais de apoio às aulas <a href="https://speakerdeck.com/valterm" target="_blank">aqui</a>.</p>
   <div class="caixa">
     <h4 class="timeline"><span>1999-2000</span><span>2000-2001</span><span>2001-2002</span><span>2002-2003</span><span>2003-2004</span><span>2004-2005</span></h4>
-    <p class="nota">anteriores Secretaria Virtual | exemplos materiais de apoio às aulas <a href="https://speakerdeck.com/valterm" target="_blank">aqui</a></p>
+    <p class="nota">anteriores Secretaria Virtual</p>
   </div>
 </section>
 <footer>
