--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
   <hr>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
-  <p>Interrupção da carreira docência para desenvolver projectos no gabinete de Comunicação e Marketing da Universidade.</p>
+  <p>Interrupção da carreira docência para propor / desenvolver serviço no gabinete de Comunicação e Marketing da Universidade.</p>
   <h3>2015/2016</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
