--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 </header>
 <section>
   <h2>Planos de Actividade</h2>
-  <h3>Marketing 2022</h3>
-  <p>?</p>
   <h3>Marketing 2021</h3>
   <ul>
     <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: PREMIUM</a></li>
@@ -84,7 +82,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
   <hr>
   <h2>Anos lectivos</h2>
   <h3>2016/...</h3>
-  <p>Interrupção da carreira docência para  desenvolver projecto no gabinete de Comunicação e Marketing da Universidade.</p>
+  <p>Interrupção da carreira docência para desenvolver projecto estrutural em Comunicação e Marketing.</p>
   <h3>2015/2016</h3>
   <p> 1º Semestre 2590 Computação Multimédia e Interactividade<br>
     1º Semestre 2586 Design de Produtos Multimédia<br>
