--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 </header>
 <section>
   <h2>Planos de Actividade</h2>
+  <h3>Marketing 2022</h3>
+  <p><a href="https://youtu.be/Rxe3j_w3Nn8" target="_blank">Youtube</a></p>
   <h3>Marketing 2021</h3>
   <ul>
     <li><a href="https://youtu.be/gUPoWrLcWxU" target="_blank">Youtube pt1: PREMIUM</a></li>
